--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <title>Shelter App - The Pet Republic</title>
   <meta charset="UTF-8">
-   
 
+  <base href="/"> 
+  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="node_modules/core-js/client/shim.min.js"></script>
   <script src="node_modules/zone.js/dist/zone.js"></script>
